--- a/main.html
+++ b/main.html
@@ -146,7 +146,7 @@
         <h2>fruits</h2>
         <div class="menu-items">
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\apple.webp" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736397770/apple_hixkbc.webp" alt="Classic Burger">
                 <h3>apple</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
@@ -156,7 +156,7 @@
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\banana.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736397785/banana_u27dbd.jpg" alt="Classic Burger">
                 <h3>Banana</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
