--- a/main.html
+++ b/main.html
@@ -151,7 +151,7 @@
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\pomegranate.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736398208/pomegranate_bgnmct.jpg" alt="Classic Burger">
                 <h3>pomegranate</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
@@ -161,12 +161,12 @@
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\jackfruit.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736398279/jackfruit_n3wdyt.jpg" alt="Classic Burger">
                 <h3>jack fruit</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\papaya.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736398446/papaya_f84a7y.jpg" alt="Classic Burger">
                 <h3>papaya</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
