--- a/main.html
+++ b/main.html
@@ -171,12 +171,12 @@
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\watermelon.webp" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399194/watermelon_znirp3.webp" alt="Classic Burger">
                 <h3>Watermelon</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\kiwi.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399220/kiwi_rdzsry.jpg" alt="Classic Burger">
                 <h3>Kiwi</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
@@ -186,27 +186,27 @@
         <h2>vegtables</h2>
         <div class="menu-items">
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\tomato.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399268/tomato_bcxplw.jpg" alt="Classic Burger">
                 <h3>Tomato</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\onion.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399330/onion_a1hcdf.jpg" alt="Classic Burger">
                 <h3>onion</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\chilligreen.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399365/chilligreen_ipbt5o.jpg" alt="Classic Burger">
                 <h3> Green chilli</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\potato.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399405/potato_b2901y.jpg" alt="Classic Burger">
                 <h3>potato</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\beetroot.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399454/beetroot_ujva1y.jpg" alt="Classic Burger">
                 <h3>Beetroot</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
@@ -216,32 +216,32 @@
         <h2>MEAT</h2>
         <div class="menu-items">
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\chicken.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399523/chicken_fmcq3w.jpg" alt="Classic Burger">
                 <h3>Chicken</h3>
-                <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
+                <p>A juicy beef burger with fresh lettuce, chicken, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\sheep.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399569/sheep_yxmxwz.jpg" alt="Classic Burger">
                 <h3>Motton(sheep)</h3>
-                <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
+                <p>A juicy beef burger with fresh lettuce, sheep meat, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\goat.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399609/goat_nh9kwr.jpg" alt="Classic Burger">
                 <h3>Motton(goat)</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\fish.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399640/fish_si3rio.jpg" alt="Classic Burger">
                 <h3>Fish</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\pork.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399673/pork_wtrcvy.jpg" alt="Classic Burger">
                 <h3>Pork</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
             <div class="menu-item">
-                <img src="C:\Users\teja\Desktop\teja PROJECT\foodweb\beef.jpg" alt="Classic Burger">
+                <img src="https://res.cloudinary.com/dltzxdc4w/image/upload/v1736399700/beef_ftywe5.jpg" alt="Classic Burger">
                 <h3>Beef</h3>
                 <p>A juicy beef burger with fresh lettuce, tomato, and our special sauce.</p>
             </div>
