--- a/main.html
+++ b/main.html
@@ -127,7 +127,7 @@
         <a href="#about">About</a>
         <a href="#menu">Menu</a>
         <a href="#order">Order</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Hero Section -->
